--- a/01-prepare-data.ipynb
+++ b/01-prepare-data.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "In this script we will prepare the data for the DeepLabeler model\n",
     "\n",
-    "Author: Ryan Fogle (rsfogle2@illinois.edu, ryanfogle98@gmail.com)\n",
+    "Author: Ryan Fogle\n",
     "\n",
     "Date: 4-7-2023"
    ]
